feat: implement expense refunds
Closes #10
